--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -45,7 +45,7 @@ story_location: docs/sprint-artifacts
 development_status:
   # Epic 1: Foundation & Infrastructure (6 stories)
   # Establishes technical foundation for all subsequent development
-  epic-1: backlog
+  epic-1: contexted
   1-1-initialize-nextjs-project-with-core-dependencies: backlog
   1-2-configure-tailwind-with-playful-nordic-theme: backlog
   1-3-set-up-supabase-project-and-environment-variables: backlog
