--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -62,7 +62,7 @@ development_status:
   2-2-display-user-profile-with-credit-balance: done
   2-3-implement-credit-purchase-flow-with-stripe-checkout: review
   2-4-display-credit-transaction-history: review
-  2-5-implement-credit-balance-warnings: backlog
+  2-5-implement-credit-balance-warnings: ready-for-dev
   2-6-implement-atomic-credit-deduction-with-rollback: backlog
   epic-2-retrospective: optional
 
