--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -72,7 +72,7 @@ development_status:
   epic-3: backlog
   3-1-create-genre-carousel-component: review
   3-2-implement-ai-lyric-generation-with-song-concept-input: review
-  3-3-build-norwegian-pronunciation-optimizer-with-gpt4: backlog
+  3-3-build-norwegian-pronunciation-optimizer-with-gpt4: in-progress
   3-4-create-phonetic-diff-viewer-component: backlog
   3-5-implement-song-generation-api-with-suno-integration: backlog
   3-6-create-ai-generation-progress-modal-component: backlog
