--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -74,8 +74,8 @@ development_status:
   3-2-implement-ai-lyric-generation-with-song-concept-input: review
   3-3-build-norwegian-pronunciation-optimizer-with-gpt4: review
   3-4-create-phonetic-diff-viewer-component: done
-  3-5-implement-song-generation-api-with-suno-integration: ready-for-dev
-  3-6-create-ai-generation-progress-modal-component: backlog
+  3-5-implement-song-generation-api-with-suno-integration: done
+  3-6-create-ai-generation-progress-modal-component: ready-for-dev
   3-7-implement-webhook-handler-for-suno-completion: backlog
   3-8-build-song-player-card-component: backlog
   3-9-implement-free-30-second-preview-generation: backlog
