--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -107,8 +107,8 @@ development_status:
   # Polishes UX with tooltips, onboarding, help docs, error messages
   # Story 7.4 (Example Songs) deferred to post-MVP
   epic-7: backlog
-  7-1-add-contextual-tooltips-throughout-app: ready-for-dev
-  7-2-create-onboarding-flow-for-first-time-users: backlog
+  7-1-add-contextual-tooltips-throughout-app: review
+  7-2-create-onboarding-flow-for-first-time-users: ready-for-dev
   7-3-create-faq-and-help-documentation-page: backlog
   7-4-add-example-songs-showcase-page: deferred  # Moved to future-enhancements.md
   7-5-implement-friendly-error-messages-with-recovery-actions: backlog
