--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -134,6 +134,6 @@ development_status:
   # Dependencies: Epic 2 (User Authentication & Credit System)
   epic-9: backlog
   9-1-responsive-header-with-navigation-and-auth-state: review
-  9-2-footer-component-with-essential-links: backlog
+  9-2-footer-component-with-essential-links: review
   9-3-layout-integration-and-consistency: backlog
   epic-9-retrospective: optional
