feat: implement early audio playback with   FIRST_SUCCESS status (Story 3.11)

--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -80,7 +80,7 @@ development_status:
   3-8-build-song-player-card-component: done
   3-9-implement-free-30-second-preview-generation: review
   3-10-add-genre-prompt-templates-to-database: review
-  3-11-implement-early-audio-playback-with-first-success: ready-for-dev  # Context generated, ready for implementation
+  3-11-implement-early-audio-playback-with-first-success: review  # Implementation complete, awaiting review
   epic-3-retrospective: optional
 
   # Epic 4: Song Library & Management (5 stories)
