updated from Suno v4 to v5 + added male and female voice button

--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -81,6 +81,7 @@ development_status:
   3-9-implement-free-30-second-preview-generation: review
   3-10-add-genre-prompt-templates-to-database: review
   3-11-implement-early-audio-playback-with-first-success: review  # Implementation complete, awaiting review
+  3-12-add-voice-gender-selection-and-upgrade-to-v5: review  # Voice selector UI + V5 model upgrade
   epic-3-retrospective: optional
 
   # Epic 4: Song Library & Management (5 stories)
